--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="box_left">
           <h1>
-            Hi, I am John, <br />
+            Hi, I am Yusuf, <br />
             Creative Technologist
           </h1>
           <p class="section__p">
